--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item name="button_debug_activity" type="id" />
+    <item name="debug_conventToMegaHourFormat" type="id" />
 </resources>
