--- a/app/src/main/res/layout/activity_debug2.xml
+++ b/app/src/main/res/layout/activity_debug2.xml
@@ -12,8 +12,8 @@
         android:background="#F8373737"
         android:longClickable="false"
         android:measureAllChildren="false"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="16dp">
+        tools:layout_editor_absoluteX="49dp"
+        tools:layout_editor_absoluteY="82dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -47,107 +47,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <Button
-                android:id="@+id/debug2_oldDebug"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5sp"
-                android:layout_marginLeft="5sp"
-                android:layout_marginEnd="5sp"
-                android:layout_marginRight="5sp"
-                android:alpha="0.8"
-                android:layerType="none"
-                android:text="Old debug screen"
-                android:textAllCaps="false"
-                android:textColor="#ffffff"
-                android:textSize="15sp"
-                app:backgroundTint="#232323"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
             <TextView
                 android:id="@+id/textView3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Widgets"
-                android:textAllCaps="false"
-                android:textColor="#ffffffff"
-                android:textSize="22sp" />
-
-            <Button
-                android:id="@+id/debug2_widgetsJson"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5sp"
-                android:layout_marginLeft="5sp"
-                android:layout_marginEnd="5sp"
-                android:layout_marginRight="5sp"
-                android:alpha="0.8"
-                android:layerType="none"
-                android:text="(string) View/Edit widgets.json"
-                android:textAllCaps="false"
-                android:textColor="#ffffff"
-                android:textSize="15sp"
-                app:backgroundTint="#232323"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <Button
-                android:id="@+id/debug2_widgetsIsExist"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5sp"
-                android:layout_marginLeft="5sp"
-                android:layout_marginEnd="5sp"
-                android:layout_marginRight="5sp"
-                android:alpha="0.8"
-                android:layerType="none"
-                android:text="(boolean) isExist(id)"
-                android:textAllCaps="false"
-                android:textColor="#ffffff"
-                android:textSize="15sp"
-                app:backgroundTint="#232323"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <Button
-                android:id="@+id/debug2_widgetsAdd"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5sp"
-                android:layout_marginLeft="5sp"
-                android:layout_marginEnd="5sp"
-                android:layout_marginRight="5sp"
-                android:alpha="0.8"
-                android:layerType="none"
-                android:text="add(id)"
-                android:textAllCaps="false"
-                android:textColor="#ffffff"
-                android:textSize="15sp"
-                app:backgroundTint="#232323"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <Button
-                android:id="@+id/debug2_widgetsRemove"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5sp"
-                android:layout_marginLeft="5sp"
-                android:layout_marginEnd="5sp"
-                android:layout_marginRight="5sp"
-                android:alpha="0.8"
-                android:layerType="none"
-                android:text="remove(id)"
-                android:textAllCaps="false"
-                android:textColor="#ffffff"
-                android:textSize="15sp"
-                app:backgroundTint="#232323"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/textView4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Services"
@@ -165,88 +66,7 @@
                 android:layout_marginRight="5sp"
                 android:alpha="0.8"
                 android:layerType="none"
-                android:text="Start WidgetsUpdaterService"
-                android:textAllCaps="false"
-                android:textColor="#ffffff"
-                android:textSize="15sp"
-                app:backgroundTint="#232323"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <Button
-                android:id="@+id/debug2_servicesStopWidgetUpdater"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5sp"
-                android:layout_marginLeft="5sp"
-                android:layout_marginEnd="5sp"
-                android:layout_marginRight="5sp"
-                android:alpha="0.8"
-                android:layerType="none"
-                android:text="Stop WidgetsUpdaterService"
-                android:textAllCaps="false"
-                android:textColor="#ffffff"
-                android:textSize="15sp"
-                app:backgroundTint="#232323"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <Button
-                android:id="@+id/debug2_servicesStartedList"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5sp"
-                android:layout_marginLeft="5sp"
-                android:layout_marginEnd="5sp"
-                android:layout_marginRight="5sp"
-                android:alpha="0.8"
-                android:layerType="none"
-                android:text="Started Services List"
-                android:textAllCaps="false"
-                android:textColor="#ffffff"
-                android:textSize="15sp"
-                app:backgroundTint="#232323"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Utils"
-                android:textAllCaps="false"
-                android:textColor="#ffffffff"
-                android:textSize="22sp" />
-
-            <Button
-                android:id="@+id/debug2_utilsConvertToMegaHourFormat"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5sp"
-                android:layout_marginLeft="5sp"
-                android:layout_marginEnd="5sp"
-                android:layout_marginRight="5sp"
-                android:alpha="0.8"
-                android:layerType="none"
-                android:text="conventToMegaHourFormat(a, b)"
-                android:textAllCaps="false"
-                android:textColor="#ffffff"
-                android:textSize="15sp"
-                app:backgroundTint="#232323"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <Button
-                android:id="@+id/debug2_utilsMakeAccurate"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5sp"
-                android:layout_marginLeft="5sp"
-                android:layout_marginEnd="5sp"
-                android:layout_marginRight="5sp"
-                android:alpha="0.8"
-                android:layerType="none"
-                android:text="makeAccurate(a, b)"
+                android:text="start WidgetsUpraterService"
                 android:textAllCaps="false"
                 android:textColor="#ffffff"
                 android:textSize="15sp"
