--- a/app/src/main/res/xml/digital_clock_info.xml
+++ b/app/src/main/res/xml/digital_clock_info.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:initialKeyguardLayout="@layout/digital_clock"
-    android:initialLayout="@layout/digital_clock"
+    android:initialKeyguardLayout="@layout/widget_digital_clock"
+    android:initialLayout="@layout/widget_digital_clock"
     android:minWidth="40dp"
     android:minHeight="40dp"
     android:previewImage="@drawable/example_appwidget_preview"
