--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,9 @@
 <resources>
-    <style name="Theme.OpenWidgetsTheme" parent="Theme.AppCompat">
+
+    <style name="Theme.OpenWidgetsTheme" parent="Theme.AppCompat"></style>
+
+    <style name="ThemeOverlay.OpenWidgets.AppWidgetContainer" parent="">
+        <item name="appWidgetBackgroundColor">@color/light_blue_600</item>
+        <item name="appWidgetTextColor">@color/light_blue_50</item>
     </style>
 </resources>
