--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,24 +8,50 @@
     tools:context=".android.activity.MainActivity">
 
     <LinearLayout
-        android:id="@+id/updateChecker"
+        android:id="@+id/main_updateChecker_background"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10sp"
-        android:background="#E4000000"
+        android:layout_margin="5sp"
+        android:background="#116AFF00"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:padding="5sp"
+        android:visibility="visible">
 
         <TextView
-            android:id="@+id/updateChecker_text"
+            android:id="@+id/main_updateChecker_text"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:text="@string/updateChecker_VERSION_OUTDATED" />
 
         <LinearLayout
-            android:id="@+id/updateChecker_buttonsLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal" />
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/main_updateChecker_button_toSite"
+                style="?android:attr/button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/updateChecker_button_toSite" />
+
+            <Button
+                android:id="@+id/main_updateChecker_button_changeLog"
+                style="?android:attr/button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/updateChecker_button_changeLog" />
+
+            <Button
+                android:id="@+id/main_updateChecker_button_download"
+                style="?android:attr/button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/updateChecker_button_download" />
+        </LinearLayout>
 
     </LinearLayout>
 
@@ -36,7 +62,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/button_about"
+            android:id="@+id/main_button_about"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_margin="8sp"
@@ -48,7 +74,7 @@
             tools:ignore="ButtonStyle" />
 
         <Button
-            android:id="@+id/button_settings"
+            android:id="@+id/main_button_settings"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_margin="8sp"
@@ -61,35 +87,41 @@
 
     </LinearLayout>
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="10dp">
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/widgetsButtonsSlot"
+        <TextView
+            android:id="@+id/main_text_widgetsIsNone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:orientation="vertical">
+            android:text="@string/text_widgetsNotFound"
+            android:textAllCaps="false"
+            android:textSize="30sp"
+            android:visibility="visible" />
 
-            <TextView
-                android:id="@+id/widgetsIsNoneText"
+        <CheckBox
+            android:id="@+id/main_checkBox_widgetsIdMode"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/checkbox_isMode"
+            android:visibility="gone" />
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:id="@+id/widgetsButtonsSlot"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/text_widgetsNotFound"
-                android:textAllCaps="false"
-                android:textSize="30sp"
-                android:visibility="visible" />
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
 
-            <CheckBox
-                android:id="@+id/checkBox_widgetsIdMode"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/checkbox_isMode"
-                android:visibility="gone" />
-        </LinearLayout>
-    </ScrollView>
+            </LinearLayout>
+        </ScrollView>
 
-
+    </LinearLayout>
 </LinearLayout>
