--- a/app/src/main/res/layout/error_message.xml
+++ b/app/src/main/res/layout/error_message.xml
@@ -9,7 +9,10 @@
         android:id="@+id/error_message"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:text="123"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="131dp" />
+        tools:layout_editor_absoluteY="131dp"
+        tools:ignore="HardcodedText" />
 </androidx.constraintlayout.widget.ConstraintLayout>
