--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,7 +7,6 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#F8373737"
         android:longClickable="false"
         android:measureAllChildren="false"
         tools:layout_editor_absoluteX="49dp"
@@ -23,7 +22,7 @@
                 android:id="@+id/button_toDebug"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/button_toDebug" />
+                android:text="@string/settings_debug" />
 
             <Button
                 android:id="@+id/button_appLanguage"
@@ -32,11 +31,34 @@
                 android:layout_weight="0.5"
                 android:text="@string/settings_language" />
 
-            <CheckBox
-                android:id="@+id/settings_checkBox_logger"
+            <Button
+                android:id="@+id/settings_button_widgetsUpdateDelayMillis"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.5"
+                android:text="@string/settings_widgetsUpdateDelayMillis" />
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/settings_checkBox_logger" />
+                android:orientation="horizontal">
+
+                <CheckBox
+                    android:id="@+id/settings_checkBox_logger"
+                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
+                    android:text="@string/settings_checkBox_logger" />
+
+                <Button
+                    android:id="@+id/settings_button_share_logs"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_weight="0"
+                    android:background="@android:drawable/ic_menu_share"
+                    android:visibility="gone" />
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/settings_title_backup"
